--- a/Torquay_website/hotel/visitors/templates/navbar.html
+++ b/Torquay_website/hotel/visitors/templates/navbar.html
@@ -1,48 +1,27 @@
 {% block content %}
-    <!-- navbar -->
-    <div class="navbar-fixed">
-        <nav class="teal">
-          <div class="container">
-            <div class="nav-wrapper">
-              <a href="#!" class="brand-logo">TravelVille</a>
-              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-               <ul class="right hide-on-med-and-down">
-                <li>
-                  <a href="#home">Home</a>
-                </li>
-                <li>
-                  <a href="#search">Search</a>
-                </li>
-                <li>
-                  <a href="#popular">Popular Places</a>
-                </li>
-                <li>
-                  <a href="#gallery">Gallery</a>
-                </li>
-                <li>
-                  <a href="#contact">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </div>
-      <ul class="sidenav" id="mobile-demo">
-        <li>
-          <a href="#home">Home</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li>
-          <a href="#search">Search</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
         </li>
-        <li>
-          <a href="#popular">Popular Places</a>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
         </li>
-        <li>
-          <a href="#gallery">Gallery</a>
-        </li>
-        <li>
-          <a href="#contact">Contact</a>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
+    </div>
+  </div>
+</nav>
 
       {% endblock %}
