--- a/Torquay_website/hotel/visitors/templates/forms.html
+++ b/Torquay_website/hotel/visitors/templates/forms.html
@@ -2,13 +2,13 @@
 {% include 'navbar.html'%}
 
 {% block content %}
-<h1>Signup to rent your trip</h1>
+<h1>Add a room</h1>
 
 <form method="POST">
     {% csrf_token %}
-        {{ form }}
-   
+    
+    {{form}}
 
-    <button type="submit">Sign up</button>
+ <button type=submit>Create</button>
     </form>
 {% endblock %}
