--- a/Pokemon_trading/trading_cards/accounts/templates/navbar.html
+++ b/Pokemon_trading/trading_cards/accounts/templates/navbar.html
@@ -21,6 +21,9 @@
         <li class="nav-item">
           <a class="nav-link" style="color: black" href="{% url 'transaction' %}" >Transaction</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" style="color: black" href="{% url 'profile' %}" >My profile</a>
+        </li>
         {% else %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'signup'%}">Signup</a>
