--- a/Pokemon_trading/trading_cards/accounts/templates/profile.html
+++ b/Pokemon_trading/trading_cards/accounts/templates/profile.html
@@ -4,21 +4,38 @@
 {% block content %}
 <h1> Welcome {{user.username}}</h1>
 
-
+<br>
 {% csrf_token %}
 {{ user.username }} 
 {{ user.email }}
 {{ user.first_name }} 
 {{ user.last_name }}
 <br>
-<!-- <h3>My cards</h3>
-{% for queen in my_queens %}
+ <h3>My offers</h3>
 
-<ul>
-<li>{{queen.queen}}</li>
-<li>{{queen.quote}}</li>
+ <div class="card" style="width: 18rem;">
+    {%for get_queen in queen_offered%}   
+    <img src='{{get_queen.queen.image_url}}' class="card-img-top"> 
+    <div class="card-body">
+        <h5 class="card-title">{{get_queen.queen}}</h5>
+        <p class="card-text" class="fst-italic">{{get_queen.queen.quote}}</p>
+    </div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Winner : {{get_queen.queen.winner}}</li>
+            <li class="list-group-item">Miss Congeniality : {{get_queen.queen.missCongeniality}}</li>
+        </ul>
 
-</ul>
+        <div class="card-body">
 
-{% endfor %} -->
+            <form method='POST'>
+                {% csrf_token %}
+                <input type='hidden' name="profile_id" value='{{get_queen.profile.id}}'>
+                <input type='hidden' name='queen_card_id' value='{{get_queen.id}}'>
+                <input type='submit' value='Accept this exchange'> 
+            
+            </form>
+        </div>
+{% endfor%}
+</div>
+
 {% endblock %}
