--- a/Pokemon_trading/trading_cards/trading_outpost/templates/transaction.html
+++ b/Pokemon_trading/trading_cards/trading_outpost/templates/transaction.html
@@ -20,10 +20,12 @@
         </ul>
 
         <div class="card-body">
-            <form action="{% url 'my_offers' %}" method='POST'>
+
+            <form method='POST'>
                 {% csrf_token %}
-                <input type="submit" class="btn btn-success" value="Get this card">
-                
+                <input type='hidden' name="profile_id" value='{{get_queen.profile.id}}'>
+                <input type='hidden' name='queen_card_id' value='{{get_queen.id}}'>
+                <input type='submit' value='Offer for exchange'> 
             
             </form>
         </div>
